# record_linkage_dash

./: .gitignore  README.md  dash_main.py  pyproject.toml
assets/: dbc.css
scripts/: clean_data.py  generate_data.py  generate_records.py
