[project]
name = "prisoners-record-linkage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dash>=3.0.4",
    "dash-ag-grid>=31.3.1",
    "dash-bootstrap-components>=2.0.3",
    "dedupe>=3.0.3",
    "faker>=37.8.0",
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "recordlinkage>=0.16",
    "sqlalchemy>=2.0.40",
]
